clusters/in-cluster/argocd/resources/argocd-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
  annotations:
    external-dns.alpha.kubernetes.io/hostname: argocd.bongima.be
    external-dns.alpha.kubernetes.io/target: traefik.bongima.be
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`argocd.bongima.be`)
      kind: Rule
      services:
        - name: argocd-server 
          port: 80
